--- a/public/index.html
+++ b/public/index.html
@@ -10,11 +10,11 @@
     <link rel="stylesheet" href="main.css">
 </head>
 <body>
-    gasgas
+
     <div id="chat-container">
         <div id="chat-window">
             <div id="output"></div>
-            <div class="actions"></div>
+            <div id="actions"></div>
         </div>
 
         <input type="text" id="username" placeholder="Username">
